cliente consulta paginada COMPLETO
